edit and like feature added

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,10 +28,14 @@
                 <% user.posts.reverse().forEach(function(post){ %>
                     <h4 class="text-blue-500 underline">@<%=user.username %></h4>
                 <p><%=post.content %></p>
-                <div class="flex gap-3 border-b-2 border-green-400">
-                    <button class="text-blue-800">Like</button>
-                    <button>Edit</button>
+                <div>
+                    <p class="text-blue-200"><%=post.likes.length %> Likes</p>
                 </div>
+                <div class="flex gap-3 border-b-2 border-green-400">
+                    <button class="text-blue-800"><a href="/like/<%=post._id%>"><%=post.likes.indexOf(user._id)===-1 ? "Like" : "unlike" %></a></button>
+                    <button><a href="/edit/<%=post._id %>">Edit</a></button>
+                </div>
+                
                 
                 <%}) %>
                 
